--- a/public/dev/scss/partials/_game.scss
+++ b/public/dev/scss/partials/_game.scss
@@ -235,10 +235,6 @@
     transition: 0.4s cubic-bezier(.42,0,.04,.99);
 }
 
-.decision-wrapper:hover {
-    transform: translate(0%, -50%) scale(120%);
-}
-
 .decision-image {
     width: 11svh;
     height: 11svh;
@@ -248,16 +244,8 @@
     left: -100%;
 }
 
-.attack:hover {
-    filter: drop-shadow(0px 0px 20px #ff3a3a);
-}
-
 .hold {
     right: -100%;
-}
-
-.hold:hover {
-    filter: drop-shadow(0px 0px 20px rgb(108, 201, 255));
 }
 
 .hold .decision-text {
@@ -291,6 +279,20 @@
     top: auto;
     bottom: 3.5svh;
     transform: none;
+}
+
+@media only screen and (min-width: 1025px) {
+    .decision-wrapper:hover {
+        transform: translate(0%, -50%) scale(120%);
+    }
+
+    .attack:hover {
+        filter: drop-shadow(0px 0px 20px #ff3a3a);
+    }
+
+    .hold:hover {
+        filter: drop-shadow(0px 0px 20px rgb(108, 201, 255));
+    }
 }
 
 @media only screen and (max-width: 1024px) {
@@ -340,10 +342,16 @@
 
     .attack {
         left: -110%;
+        filter: drop-shadow(0px 0px 20px #ff3a3a);
     }
 
     .hold {
         right: -110%;
+        filter: drop-shadow(0px 0px 20px rgb(108, 201, 255));
+    }
+
+    .decision-inactive {
+        filter: none;
     }
 }
 
